--- a/assets/style.scss
+++ b/assets/style.scss
@@ -306,6 +306,7 @@ p > img {
 
 .site-name {
   margin: 0;
+  margin-top: 23px;
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
