--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/about">Home</a>
               <a href="{{ site.baseurl }}/search">Search</a>
               <a href="{{ site.baseurl }}/archive">Archive</a>
             </nav>
