--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 
             <nav>
               <a href="{{ site.baseurl }}/about">Home</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/archive">Archive</a>
+              <!-- <a href="{{ site.baseurl }}/search">Search</a> -->
+              <!-- <a href="{{ site.baseurl }}/archive">Archive</a> -->
             </nav>
           </header>
         </div>
